# RSTORE

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  pythonapp.yml
docs/: conf.py  formats.rst  index.rst  installation.rst
instance/: sample.py
rstore/: api.py  schemas.py
storage/: run_kvrocks.sh
