[tool.poetry]
name = "rstore"
version = "0.1.0"
description = "Report Storage and Tracking of Observations and Records Efficiently "
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
fastapi = "^0.111.1"
valkey = "^6.0.0b1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
