[tool.poetry]
name = "rstore"
version = "0.1.0"
description = "Report Storage and Tracking of Observations and Records Efficiently"
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
fastapi = "^0.111.1"
valkey = "^6.0.0b1"
uvicorn = "^0.30.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
sphinx-book-theme = "^1.1.3"
sphinx-autodoc-typehints = "^2.2.3"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-bibtex = "^2.6.2"
sphinxcontrib-openapi = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"


[tool.isort]
profile = "black"