[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rstore"
version = "0.1.0"
description = "Report Storage and Tracking of Observations and Records Efficiently"
authors = [
    {name = "Cédric Bonhomme", email = "cedric.bonhomme@circl.lu"}
]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["observations", "evidences", "kvrocks", "api", "scanning", "csirt"]

dynamic = ["classifiers"]

requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.10.6)",
    "fastapi (>=0.115.8)",
    "valkey (>=6.1.0)",
    "uvicorn (>=0.34.0)",
]


[project.urls]
homepage = "https://github.com/scandale-project/RSTORE"
repository = "https://github.com/scandale-project/RSTORE"
documentation = "https://rstore.readthedocs.io"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.0"
pre-commit = "^3.8.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
sphinx-book-theme = "^1.1.3"
sphinx-autodoc-typehints = "^2.2.3"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-bibtex = "^2.6.2"
sphinxcontrib-openapi = "^0.8.4"


[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"


[tool.isort]
profile = "black"
